# scriptd

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package.json  scriptd.sh  service.yaml  todos.md  tsconfig.json
assets/: Scriptd.icns
modules/better-wifi/: README.md  module.rs  module.yaml
modules/brew-manager/: README.md  module.rs  module.ts  module.yaml  package.json
modules/cpu-monitor/: README.md  module.rs  module.ts  module.yaml  package.json
modules/mbrew/: README.md  module.rs  module.yaml
modules/mcpu/: README.md  module.rs  module.yaml
modules/mwifi/: README.md  module.rs  module.yaml
modules/wifi-monitor/: README.md  module.rs  module.ts  module.yaml  package.json
src/: config.rs  config.ts  credentials.rs  interfaces.ts  launchd.rs  logger.rs  main.rs  main.ts  module-runner.ts  modules.rs  paths.rs  paths.ts  status.rs  status.ts  supervisor.rs  supervisor.ts  test.ts  validate.ts
src/tests/: harness.ts  integration.ts  unit.ts
tests/: integration.rs
tmp/: plan.md  tasks.md
